--- a/hafta2.html
+++ b/hafta2.html
@@ -3,6 +3,105 @@
 <head>
     <meta charset="utf-8">
     <title>Hafta 2 - Masal</title>
+    <style>
+        /* Genel stil */
+        body {
+            font-family: Arial, sans-serif;
+            color: #333;
+            background-color: #f5f5f5;
+            margin: 0;
+            padding: 0;
+        }
+        
+        /* Başlık */
+        header {
+            background-color: #6A5ACD;
+            color: white;
+            text-align: center;
+            padding: 2em 0;
+            font-family: 'Georgia', serif;
+        }
+        
+        header h1 {
+            margin: 0;
+            font-size: 2.5em;
+            text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.);
+        }
+
+        /* Navigasyon menüsü */
+        nav {
+            background-color: #FFB90F;
+            padding: 1em;
+            text-align: center;
+        }
+
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+            display: flex;
+            justify-content: center;
+            gap: 1em;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            color: #FFD700;
+        }
+
+        /* Bölümler */
+        section {
+            max-width: 800px;
+            margin: 2em auto;
+            padding: 1em;
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.5);
+        }
+
+        section h2 {
+            color: #6AACD;
+            text-align: center;
+            font-family: 'Georgia', serif;
+        }
+
+        section p {
+            line-height: 1.6;
+            font-size: 1.1em;
+            text-align: justify;
+        }
+
+        /* Resim ve ses */
+        section img {
+            display: block;
+            margin: 1em auto;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        figure {
+            text-align: center;
+            margin: 1em 0;
+        }
+
+        audio {
+            width: 100%;
+            outline: none;
+        }
+
+        /* Altbilgi */
+        footer {
+            text-align: center;
+            padding: 1em 0;
+            background-color: #6A5ACD;
+            color: white;
+        }
+    </style>
 </head>
 <body>
 <header>
@@ -19,8 +118,8 @@
 
 <section id="bolum1">
     <h2>Bölüm 1: Kaybolan Gün</h2>
-    <img src="hafta2images/resim1.jpg" alt="Kaybolan Gün" style="max-width:100%; height:auto;">
-    <p>Bir sabah, küçük bir köyde yaşayan Elif, güneşin doğuşuyla birlikte uyanmıştı. Ancak bu sabah, her zamankinden farklıydı. Gökyüzü gri bulutlarla kaplıydı ve rüzgar, ince bir hüzünle esiyordu. Elif, köyün dışında yer alan ormana doğru yürümeye karar verdi. Ormanın derinliklerinde kaybolmuş eski bir efsanenin peşindeydi. Efsaneye göre, ormanın derinliklerinde kaybolan bir gün, tekrar bulunmayı bekliyordu.</p>
+    <img src="hafta2images/resim1.jpg" alt="Kaybolan Gün">
+    <p>Bir sabah, küçük bir köyde yaşayan Elif, güneşin doğuşuyla birlikte uyanmıştı...</p>
     <figure>
         <figcaption>1. Bölümü Dinle:</figcaption>
         <audio controls src="hafta2sesler/m1.mp3">
@@ -31,8 +130,8 @@
 
 <section id="bolum2">
     <h2>Bölüm 2: Ormanın Sırrı</h2>
-    <img src="hafta2images/resim2.jpg" alt="Ormanın Sırrı" style="max-width:100%; height:auto;">
-    <p>Ormana girdiğinde, Elif bir an için tereddüt etti. Ağaçların arasında ilerledikçe, karanlık gölgelerin arasında kaybolmuş gibi hissetti. Ancak cesaretini toplayarak ilerlemeye devam etti. Bir süre sonra, karşısına devasa bir çam ağacı çıktı. Ağacın etrafında, eski bir taş döşemesi vardı. Elif, merakla taşların üzerine adım attı. Her adımında bir melodinin yankılandığını hissetti. Melodi, ona kaybolmuş günün sesi gibi geliyordu.</p>
+    <img src="hafta2images/resim2.jpg" alt="Ormanın Sırrı">
+    <p>Ormana girdiğinde, Elif bir an için tereddüt etti...</p>
     <figure>
         <figcaption>2. Bölümü Dinle:</figcaption>
         <audio controls src="hafta2sesler/m2.mp3">
@@ -43,8 +142,8 @@
 
 <section id="bolum3">
     <h2>Bölüm 3: Yeniden Doğuş</h2>
-    <img src="hafta2images/resim3.jpg" alt="Yeniden Doğuş" style="max-width:100%; height:auto;">
-    <p>Elif, melodinin peşinden yürümeye devam etti. Taş döşemesi onu derin bir çukura yönlendirdi. Çukurun içinde, büyülü bir ışık parıldıyordu. Elif, ışığa doğru yaklaştıkça, kaybolmuş günün yansımasını gördü. Bu, geçen zamanın anılarını taşıyan bir günün görüntüsüydü. Birden, kaybolmuş gün bir bedene büründü; Elif’in karşısında genç bir kız belirdi. Kız, gülümseyerek Elif’e, “Beni buldun. Şimdi seni de özgür bırakabilirim,” dedi.</p>
+    <img src="hafta2images/resim3.jpg" alt="Yeniden Doğuş">
+    <p>Elif, melodinin peşinden yürümeye devam etti...</p>
     <figure>
         <figcaption>3. Bölümü Dinle:</figcaption>
         <audio controls src="hafta2sesler/m3.mp3">
@@ -55,8 +154,8 @@
 
 <section id="bolum4">
     <h2>Bölüm 4: Yeni Başlangıç</h2>
-    <img src="hafta2images/resim4.jpg" alt="Yeni Başlangıç" style="max-width:100%; height:auto;">
-    <p>Kız, Elif’in elini tuttu ve ışık içinde kayboldu. Elif, bir an için her şeyin karardığını hissetti ama sonra gözlerini açtığında, ormanın dışındaki güneşli alana ulaşmıştı. Gözleri parlıyordu; çünkü artık geçmişin yüklerinden kurtulmuştu. Elif, o günden sonra kaybolmuş günlerin efsanesini köyde anlatmaya başladı. Herkes, Elif’in hikayesini dinlerken umut buldu ve kaybolmuş anıların, yeniden doğuşun kapısını aralayabileceğini öğrendi. Ormanın sırrı, köyde yeni bir başlangıcın simgesi haline geldi.</p>
+    <img src="hafta2images/resim4.jpg" alt="Yeni Başlangıç">
+    <p>Kız, Elif’in elini tuttu ve ışık içinde kayboldu...</p>
     <figure>
         <figcaption>4. Bölümü Dinle:</figcaption>
         <audio controls src="hafta2sesler/m4.mp3">
@@ -65,5 +164,8 @@
     </figure>
 </section>
 
+<footer>
+    © Berna ÖZDEMİR - 2210780009
+</footer>
 </body>
 </html>
