--- a/hafta2.html
+++ b/hafta2.html
@@ -82,6 +82,7 @@
             margin: 1em auto;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 100%;
         }
 
         figure {
