--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <a href="hafta6.html">Hafta 6</a>
     <a href="hafta7_1.html">Hafta 7.1</a>
     <a href="hafta7_2.html">Hafta 7.2</a>
+    <a href="hafta8.html">Hafta 8</a>
   </div>
 </body>
 </html>
