--- a/hafta8.html
+++ b/hafta8.html
@@ -3,50 +3,89 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rastgele Arka Plan ve Görseller</title>
+  <title>Hafta 8 - Resimler ve Arkaplan</title>
   <style>
     body {
       margin: 0;
-      font-family: Arial, sans-serif;
+      font-family: 'Arial', sans-serif;
       background-size: cover;
       background-repeat: no-repeat;
+      background-position: center;
+      transition: background 0.8s ease-in-out;
+      color: #fff;
     }
+
     .container {
       display: flex;
       justify-content: center;
       align-items: center;
       flex-direction: column;
       min-height: 100vh;
+      backdrop-filter: blur(8px);
+      background-color: rgba(0, 0, 0, 0.4);
+      padding: 20px;
+      box-shadow: 0 8px 20px rgba(0, 0, 0, 0.6);
+      border-radius: 12px;
     }
+
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 20px;
+      text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.7);
+    }
+
     .images {
       display: flex;
-      gap: 10px;
+      gap: 15px;
       margin-top: 20px;
     }
+
     .images img {
       width: 150px;
       height: 150px;
       object-fit: cover;
-      display: none; /* Başlangıçta gizli */
+      border-radius: 12px;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
+      opacity: 0;
+      transition: opacity 0.5s ease, transform 0.3s ease;
+      transform: scale(0.9);
     }
+
+    .images img.show {
+      opacity: 1;
+      transform: scale(1);
+    }
+
     button {
-      padding: 10px 20px;
-      margin: 5px;
+      padding: 12px 24px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      background: linear-gradient(45deg, #ff7eb3, #ff758c);
+      color: #fff;
+      font-size: 1em;
       cursor: pointer;
+      box-shadow: 0 5px 15px rgba(0, 0, 0, 0.4);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    button:hover {
+      transform: scale(1.1);
+      box-shadow: 0 8px 20px rgba(255, 117, 140, 0.7);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Rastgele Arka Plan ve Resimler</h1>
-    <div class="hafta8images">
+    <h1>Arka Plan ve Resimler <h1>
+    <div class="images">
       <img id="image1" src="image1.jpg" alt="Image 1">
       <img id="image2" src="image2.jpg" alt="Image 2">
       <img id="image3" src="image3.jpg" alt="Image 3">
     </div>
-    <button onclick="toggleImage('image1')">Resim 1 Göster/Gizle</button>
-    <button onclick="toggleImage('image2')">Resim 2 Göster/Gizle</button>
-    <button onclick="toggleImage('image3')">Resim 3 Göster/Gizle</button>
+    <button onclick="toggleImage('image1')">🖼 Resim 1 Göster/Gizle</button>
+    <button onclick="toggleImage('image2')">🖼 Resim 2 Göster/Gizle</button>
+    <button onclick="toggleImage('image3')">🖼 Resim 3 Göster/Gizle</button>
   </div>
 
   <script>
@@ -70,7 +109,7 @@
     // Resim göster/gizle işlevi
     function toggleImage(imageId) {
       const img = document.getElementById(imageId);
-      img.style.display = img.style.display === 'none' ? 'block' : 'none';
+      img.classList.toggle('show');
     }
   </script>
 </body>
