--- a/hafta8.html
+++ b/hafta8.html
@@ -78,7 +78,7 @@
 <body>
   <div class="container">
     <h1>Arka Plan ve Resimler <h1>
-    <div class="images">
+    <div class="hafta8images">
       <img id="image1" src="image1.jpg" alt="Image 1">
       <img id="image2" src="image2.jpg" alt="Image 2">
       <img id="image3" src="image3.jpg" alt="Image 3">
