--- a/hafta8.html
+++ b/hafta8.html
@@ -47,13 +47,15 @@
       border-radius: 12px;
       box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
       opacity: 0;
-      transition: opacity 0.5s ease, transform 0.3s ease;
       transform: scale(0.9);
+      transition: opacity 0.5s ease, transform 0.3s ease;
+      display: none; /* Başlangıçta gizlenir */
     }
 
     .images img.show {
       opacity: 1;
       transform: scale(1);
+      display: block; /* Görüntüyü açar */
     }
 
     button {
@@ -77,8 +79,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Arka Plan ve Resimler <h1>
-    <div class="hafta8images">
+    <h1>Arka Plan ve Resimler</h1> <!-- Başlık etiketi düzeltildi -->
+    <div class="images"> <!-- class ismi düzeltildi -->
       <img id="image1" src="image1.jpg" alt="Image 1">
       <img id="image2" src="image2.jpg" alt="Image 2">
       <img id="image3" src="image3.jpg" alt="Image 3">
@@ -109,7 +111,7 @@
     // Resim göster/gizle işlevi
     function toggleImage(imageId) {
       const img = document.getElementById(imageId);
-      img.classList.toggle('show');
+      img.classList.toggle('show'); // CSS class toggle ile çalışır
     }
   </script>
 </body>
