--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
     <a href="hafta7_2.html">Hafta 7.2</a>
     <a href="hafta8.html">Hafta 8</a>
     <a href="hafta9.html">Hafta 9</a>
+    <a href="hafta10.php">Hafta 10</a>
+    <a href="hafta11.php">Hafta 11</a>
   </div>
 </body>
 </html>
