--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <a href="hafta8.html">Hafta 8</a>
     <a href="hafta9.html">Hafta 9</a>
     <a href="hafta10.php">Hafta 10</a>
-    <a href="hafta11.php">Hafta 11</a>
+    <a href="hafta11.sql">Hafta 11</a>
   </div>
 </body>
 </html>
