--- a/hafta8.html
+++ b/hafta8.html
@@ -80,7 +80,7 @@
 <body>
   <div class="container">
     <h1>Arka Plan ve Resimler</h1> <!-- Başlık etiketi düzeltildi -->
-    <div class="images"> <!-- class ismi düzeltildi -->
+    <div class="hafta8images"> <!-- class ismi düzeltildi -->
       <img id="image1" src="image1.jpg" alt="Image 1">
       <img id="image2" src="image2.jpg" alt="Image 2">
       <img id="image3" src="image3.jpg" alt="Image 3">
