--- a/hafta8.html
+++ b/hafta8.html
@@ -83,9 +83,9 @@
       <img id="image2" src="image2.jpg" alt="Image 2">
       <img id="image3" src="image3.jpg" alt="Image 3">
     </div>
-    <button onclick="toggleImage('Image 1')">🖼 Resim 1 Göster/Gizle</button>
-    <button onclick="toggleImage('Image 2')">🖼 Resim 2 Göster/Gizle</button>
-    <button onclick="toggleImage('Image 3')">🖼 Resim 3 Göster/Gizle</button>
+    <button onclick="toggleImage('image1')">🖼 Resim 1 Göster/Gizle</button>
+    <button onclick="toggleImage('image2')">🖼 Resim 2 Göster/Gizle</button>
+    <button onclick="toggleImage('image3')">🖼 Resim 3 Göster/Gizle</button>
   </div>
 
   <script>
