--- a/hafta8.html
+++ b/hafta8.html
@@ -89,18 +89,18 @@
   </div>
 
   <script>
-    // 10 farklı arka plan resmi
+    // "hafta8background" klasöründen arka plan resimlerini kullan
     const backgrounds = [
-      'background1.jpg',
-      'background2.jpg',
-      'background3.jpg',
-      'background4.jpg',
-      'background5.jpg',
-      'background6.jpg',
-      'background7.jpg',
-      'background8.jpg',
-      'background9.jpg',
-      'background10.jpg'
+      'hafta8background/background1.jpg',
+      'hafta8background/background2.jpg',
+      'hafta8background/background3.jpg',
+      'hafta8background/background4.jpg',
+      'hafta8background/background5.jpg',
+      'hafta8background/background6.jpg',
+      'hafta8background/background7.jpg',
+      'hafta8background/background8.jpg',
+      'hafta8background/background9.jpg',
+      'hafta8background/background10.jpg'
     ];
 
     // Sayfa yüklendiğinde rastgele bir arka plan seç
