--- a/hafta8.html
+++ b/hafta8.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hafta 8 - Resimler ve Arkaplan</title>
+  <title>Hafta 8 - Arka Plan ve Resimler</title>
   <style>
     body {
       margin: 0;
@@ -89,7 +89,7 @@
   </div>
 
   <script>
-    // "hafta8background" klasöründen arka plan resimlerini kullan
+    // Arka plan dosyalarının bulunduğu klasör ve isimler
     const backgrounds = [
       'hafta8background/background1.jpg',
       'hafta8background/background2.jpg',
