--- a/hafta8.html
+++ b/hafta8.html
@@ -79,9 +79,9 @@
   <div class="container">
     <h1>Arka Plan ve Resimler</h1>
     <div class="hafta8images">
-      <img id="image1" src="image1.jpg" alt="Image 1">
-      <img id="image2" src="image2.jpg" alt="Image 2">
-      <img id="image3" src="image3.jpg" alt="Image 3">
+      <img id="image1" src="hafta8images/image1.jpg" alt="Image 1">
+      <img id="image2" src="hafta8images/image2.jpg" alt="Image 2">
+      <img id="image3" src="hafta8images/image3.jpg" alt="Image 3">
     </div>
     <button onclick="toggleImage('image1')">🖼 Resim 1 Göster/Gizle</button>
     <button onclick="toggleImage('image2')">🖼 Resim 2 Göster/Gizle</button>
