--- a/hafta8.html
+++ b/hafta8.html
@@ -83,9 +83,9 @@
       <img id="image2" src="hafta8images/image2.jpg" alt="Image 2">
       <img id="image3" src="hafta8images/image3.jpg" alt="Image 3">
     </div>
-    <button onclick="toggleImage('image1')"> Resim 1'i Göster/Gizle</button>
-    <button onclick="toggleImage('image2')"> Resim 2'yi Göster/Gizle</button>
-    <button onclick="toggleImage('image3')"> Resim 3'ü Göster/Gizle</button>
+    <button onclick="toggleImage('image1')"> Bubbles </button>
+    <button onclick="toggleImage('image2')"> Blossom </button>
+    <button onclick="toggleImage('image3')"> Buttercup </button>
   </div>
 
   <script>
