--- a/hafta8.html
+++ b/hafta8.html
@@ -77,7 +77,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Arka Plan ve Resimler</h1>
+    <h1>Powerpuff Girls</h1>
     <div class="hafta8images">
       <img id="image1" src="hafta8images/image1.jpg" alt="Image 1">
       <img id="image2" src="hafta8images/image2.jpg" alt="Image 2">
