--- a/hafta8.html
+++ b/hafta8.html
@@ -83,9 +83,9 @@
       <img id="image2" src="hafta8images/image2.jpg" alt="Image 2">
       <img id="image3" src="hafta8images/image3.jpg" alt="Image 3">
     </div>
-    <button onclick="toggleImage('image1')"> Bubbles </button>
-    <button onclick="toggleImage('image2')"> Blossom </button>
-    <button onclick="toggleImage('image3')"> Buttercup </button>
+    <button onclick="handleButtonClick('image1')"> Bubbles </button>
+    <button onclick="handleButtonClick('image2')"> Blossom </button>
+    <button onclick="handleButtonClick('image3')"> Buttercup </button>
   </div>
 
   <script>
@@ -103,20 +103,23 @@
       'hafta8background/background10.jpg'
     ];
 
-    // Sayfa yüklendiğinde rastgele bir arka plan seç
+    // Rastgele arka plan seçme işlevi
     function setRandomBackground() {
       const randomIndex = Math.floor(Math.random() * backgrounds.length);
       const selectedBackground = backgrounds[randomIndex];
       document.body.style.backgroundImage = `url(${selectedBackground})`;
     }
 
-    // Resim göster/gizle işlevi
-    function toggleImage(imageId) {
+    // Resmi göster/gizle ve arka planı değiştir
+    function handleButtonClick(imageId) {
       const img = document.getElementById(imageId);
       img.classList.toggle('show'); // CSS class toggle ile çalışır
+
+      // Rastgele bir arka plan ayarla
+      setRandomBackground();
     }
 
-    // Rastgele arka planı ayarla
+    // Sayfa ilk açıldığında rastgele bir arka plan ayarla
     setRandomBackground();
   </script>
 </body>
