--- a/hafta10.1.html
+++ b/hafta10.1.html
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #f4f4f9;
+      background-color: #fbb6d0; /* Bebek pembesi */
       font-family: Arial, sans-serif;
     }
 
@@ -20,27 +20,24 @@
       top: 20%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #ffffff;
+      background-color: #a2c9e0; /* Bebek mavisi */
       border: 1px solid #ddd;
       box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
       padding: 20px;
       border-radius: 10px;
       text-align: center;
       width: 300px;
-      opacity: 0; 
-      visibility: hidden; 
-      transition: opacity 1s ease-in-out, visibility 1s ease-in-out;
+      opacity: 0;
+      visibility: hidden;
+      transition: opacity 1s ease-in-out, visibility 0s linear 1s; /* Görünürlük geçişi */
     }
 
     .notification.show {
       opacity: 1;
       visibility: visible;
+      transition: opacity 1s ease-in-out;
     }
 
-    .notification.hide {
-      opacity: 0;
-      visibility: hidden;
-    }
   </style>
 </head>
 <body>
@@ -55,9 +52,8 @@
       notification.classList.add('show'); 
 
       setTimeout(() => {
-        notification.classList.remove('show'); 
-        notification.classList.add('hide'); 
-      }, 5000);
+        notification.classList.remove('show');
+      }, 5000); // 5 saniye sonra duyuru kaybolur
     }
 
     window.onload = showNotification;
