Update and rename hafta10.1.html to hafta10.html

--- a/hafta10.html
+++ b/hafta10.html
@@ -29,7 +29,7 @@
       width: 300px;
       opacity: 0;
       visibility: hidden;
-      transition: opacity 1s ease-in-out, visibility 0s linear 1s; /* Görünürlük geçişi */
+      transition: opacity 1s ease-in-out, visibility 0s 1s;
     }
 
     .notification.show {
@@ -49,14 +49,14 @@
     const notification = document.getElementById('notification');
 
     function showNotification() {
-      notification.classList.add('show'); 
+      notification.classList.add('show'); // Duyuru penceresini görünür yap
 
       setTimeout(() => {
-        notification.classList.remove('show');
-      }, 5000); // 5 saniye sonra duyuru kaybolur
+        notification.classList.remove('show'); // 5 saniye sonra duyuru kaybolur
+      }, 5000);
     }
 
-    window.onload = showNotification;
+    window.onload = showNotification; // Sayfa yüklendiğinde duyuruyu göster
   </script>
 </body>
 </html>
