--- a/hafta9.html
+++ b/hafta9.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hafta 9</title>
+    <title>Hafta 9 - Test Uygulaması</title>
     <style>
         body {
-            font-family: 'Roboto', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            min-height: 100vh;
-            background: linear-gradient(135deg, #74ebd5, #9face6);
-            color: #333;
+    font-family: 'Roboto', Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    min-height: 100vh;
+    background: #ff80b2; /* Pembe arka plan rengi */
+    color: #333;
         }
 
         nav {
@@ -139,14 +139,14 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#questions-container">Test Uygulaması</a></li>
+            <li><a href="#questions-container">Test Soruları</a></li>
         </ul>
     </nav>
 
     <div class="container">
         <h1>Test Uygulaması</h1>
         <div id="questions-container"></div>
-        <button id="submit-test">Testi Gönder</button>
+        <button id="submit-test">Sonucu Gör</button>
     </div>
 
     <div id="overlay"></div>
