--- a/hafta9.html
+++ b/hafta9.html
@@ -157,7 +157,8 @@
     </div>
 
     <script>
-        fetch('hafta9_sorular.json')
+        fetch('https://github.com/bernaozdemir/BTE311_Web_BernaOzdemir/blob/main/hafta9_sorular.json')
+
             .then(response => {
                 if (!response.ok) {
                     throw new Error('JSON dosyası yüklenirken hata oluştu!');
