--- a/hafta9.html
+++ b/hafta9.html
@@ -157,7 +157,7 @@
     </div>
 
     <script>
-        fetch('https://github.com/bernaozdemir/BTE311_Web_BernaOzdemir/blob/main/hafta9_sorular.json')
+       fetch('https://raw.githubusercontent.com/bernaozdemir/BTE311_Web_BernaOzdemir/main/hafta9_sorular.json')
 
             .then(response => {
                 if (!response.ok) {
